--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,11 @@
+- add new maze button
+- create maze entity
+- create edit-maze
+- setup CRUD
+
+
+====
+
 import { TestBed } from '@angular/core/testing';
 
 import { DataService } from './data.service';
